--- a/common_tags/task.yaml
+++ b/common_tags/task.yaml
@@ -14,7 +14,7 @@ environment_parameters:
 environment_type: docker
 file: ''
 input_random: 0
-name: Éléments courants
+name: 5. Éléments courants
 network_grading: false
 problems:
     h1_tag:
