--- a/form_tags2/task.yaml
+++ b/form_tags2/task.yaml
@@ -24,7 +24,7 @@ environment_parameters:
 environment_type: docker
 file: ''
 input_random: 0
-name: Éléments de formulaire (2)
+name: 26. Éléments de formulaire (2)
 network_grading: false
 problems:
     date_number:
