--- a/form_tags3/task.yaml
+++ b/form_tags3/task.yaml
@@ -22,7 +22,7 @@ environment_parameters:
 environment_type: docker
 file: ''
 input_random: 0
-name: Éléments de formulaire (3)
+name: 27. Éléments de formulaire (3)
 network_grading: false
 problems:
     select:
