--- a/global_attributes/task.yaml
+++ b/global_attributes/task.yaml
@@ -14,7 +14,7 @@ environment_parameters:
 environment_type: docker
 file: ''
 input_random: 0
-name: Attributs universels
+name: 14. Attributs universels
 network_grading: false
 problems:
     lang:
