--- a/header_tags/task.yaml
+++ b/header_tags/task.yaml
@@ -16,7 +16,7 @@ environment_parameters:
 environment_type: docker
 file: ''
 input_random: 0
-name: Éléments d'en-tête
+name: 4. Éléments d'en-tête
 network_grading: false
 problems:
     title:
