--- a/link_tags/task.yaml
+++ b/link_tags/task.yaml
@@ -27,7 +27,7 @@ environment_parameters:
 environment_type: docker
 file: ''
 input_random: 0
-name: Élément de liens (1)
+name: 18. Élément de liens (1)
 network_grading: false
 problems:
     a:
