--- a/multimedia/task.yaml
+++ b/multimedia/task.yaml
@@ -25,7 +25,7 @@ environment_parameters:
 environment_type: docker
 file: ''
 input_random: 0
-name: 'Éléments multimédia : audio & vidéo'
+name: '21. Éléments multimédia : audio & vidéo'
 network_grading: false
 problems:
     audio1:
