--- a/MCQ-HTML-basics/task.yaml
+++ b/MCQ-HTML-basics/task.yaml
@@ -1,9 +1,6 @@
-accessible: true
 author: ''
-categories: []
 contact_url: ''
-context: |4-
-
+context: |-
     Sur base de cette illustration,
 
         .. image:: MCQ-HTML-basics/mcq-syntax.png
@@ -16,11 +13,9 @@ context: |4-
 environment_id: mcq
 environment_parameters: {}
 environment_type: mcq
-evaluate: best
 file: ''
-groups: false
 input_random: 0
-name: '[QCM] Syntaxe d''un élément HTML'
+name: 2. [QCM] Syntaxe d'un élément HTML
 network_grading: false
 problems:
     html_syntax1:
@@ -113,8 +108,3 @@ problems:
         -   text: Une balise fermante
             valid: true
         -   text: Du contenu
-stored_submissions: 0
-submission_limit:
-    amount: -1
-    period: -1
-weight: 1.0
