--- a/color_value3/task.yaml
+++ b/color_value3/task.yaml
@@ -32,7 +32,7 @@ environment_parameters:
 environment_type: docker
 file: ''
 input_random: 0
-name: Couleur RGB
+name: 8. Couleur RGB
 network_grading: false
 problems:
     percentage:
