--- a/html_overview1/task.yaml
+++ b/html_overview1/task.yaml
@@ -1,6 +1,4 @@
-accessible: true
 author: ''
-categories: []
 contact_url: ''
 context: |
     Faisons le point sur ce que nous avons appris jusqu'à maintenant:
@@ -32,11 +30,9 @@ environment_parameters:
         memory: '250'
     run_cmd: ''
 environment_type: docker
-evaluate: best
 file: ''
-groups: false
 input_random: 0
-name: '[Récap] L''en-tête'
+name: 12. [Récap] L'en-tête
 network_grading: false
 problems:
     skeleton:
@@ -59,8 +55,3 @@ problems:
 
                 <body>
             </html>
-stored_submissions: 0
-submission_limit:
-    amount: -1
-    period: -1
-weight: 1.0
