--- a/iframe/task.yaml
+++ b/iframe/task.yaml
@@ -24,7 +24,7 @@ environment_parameters:
 environment_type: docker
 file: ''
 input_random: 0
-name: Élément de cadre intégré
+name: 22. Élément de cadre intégré
 network_grading: false
 problems:
     document:
