--- a/inline_style/task.yaml
+++ b/inline_style/task.yaml
@@ -1,6 +1,4 @@
-accessible: true
 author: ''
-categories: []
 contact_url: ''
 context: |
     La façon la plus directe d'appliquer du CSS à un élément HTML est d'y ajouter l'attribut ``style``.
@@ -12,11 +10,9 @@ environment_parameters:
         memory: '300'
     run_cmd: ''
 environment_type: docker
-evaluate: best
 file: ''
-groups: false
 input_random: 0
-name: Style en ligne
+name: 3. Style en ligne
 network_grading: false
 problems:
     inline_style:
@@ -29,8 +25,3 @@ problems:
 
             La propriété CSS est ``color`` et les 3 valeurs possibles pour répondre à cet exercice sont ``red``, ``green`` ou ``blue``.
         default: <h1 style="[?]">Le titre de votre site est de couleur:</h1>
-stored_submissions: 0
-submission_limit:
-    amount: -1
-    period: -1
-weight: 1.0
