--- a/link_tags_continued/task.yaml
+++ b/link_tags_continued/task.yaml
@@ -24,7 +24,7 @@ environment_parameters:
 environment_type: docker
 file: ''
 input_random: 0
-name: Élément de liens (2)
+name: 19. Élément de liens (2)
 network_grading: false
 problems:
     top:
