--- a/padding/task.yaml
+++ b/padding/task.yaml
@@ -20,7 +20,7 @@ environment_parameters:
 environment_type: docker
 file: ''
 input_random: 0
-name: Marges (intérieures)
+name: 13. Marges (intérieures)
 network_grading: false
 problems:
     length_value:
