--- a/theory_absolute_vs_relative_path/task.yaml
+++ b/theory_absolute_vs_relative_path/task.yaml
@@ -90,7 +90,7 @@ environment_parameters: {}
 environment_type: mcq
 file: ''
 input_random: 0
-name: '[Théorie] Chemins & liens: relatif ou absolu'
+name: '15. [Théorie] Chemins & liens: relatif ou absolu'
 network_grading: false
 problems:
     validation_check:
