--- a/theory_css_basics/task.yaml
+++ b/theory_css_basics/task.yaml
@@ -170,7 +170,7 @@ environment_parameters: {}
 environment_type: mcq
 file: ''
 input_random: 0
-name: '[Théorie] Syntaxe CSS'
+name: 1. [Théorie] Syntaxe CSS
 network_grading: false
 problems:
     validation_check:
