--- a/theory_html_basics/task.yaml
+++ b/theory_html_basics/task.yaml
@@ -184,7 +184,7 @@ environment_parameters: {}
 environment_type: mcq
 file: ''
 input_random: 0
-name: '[Théorie] Syntaxe HTML'
+name: 1. [Théorie] Syntaxe HTML
 network_grading: false
 problems:
     validation_check:
